--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -8,7 +8,7 @@ $myBlueTrim: rgba(206, 203, 236, 0.863);
 $myBlueBackground: rgb(249, 251, 255);
 
 $titlefont: "Sanchez";
-$secondaryfont: "Scada";
+$secondaryfont: "Seaweed+Script";
 
 h2 {
   font-family: $titlefont;
@@ -24,7 +24,6 @@ h2 {
   font-family: $secondaryfont;
   text-align: justify;
   text-justify: inter-word;
-  font-size: 1.5em;
   padding: 1em;
   height: inherit;
 }
@@ -43,8 +42,8 @@ h2 {
   display: inline-block;
   font-size: 1em;
   margin-right: 2em;
+  cursor: pointer;
 }
-
 .btn-primary {
   background-color: $myBlue;
 }
@@ -73,4 +72,24 @@ h2 {
 
 .formInput:focus {
   border-color: #333;
+}
+
+.alert {
+  border-radius: 0.25em;
+  color: white;
+  padding: 0.5em;
+  font-size: 1.15em;
+  display: flex;
+  position: absolute;
+  width: 97.5%;
+}
+
+.alert-success {
+  background-color: green;
+  border: 2px solid lightgreen;
+}
+
+.alert-danger {
+  background-color: $myColor;
+  border: 2px solid palevioletred;
 }
