--- a/client/src/components/layout/Nav.scss
+++ b/client/src/components/layout/Nav.scss
@@ -2,6 +2,11 @@
 $myBlue: rgba(65, 115, 189, 0.89);
 $myBlueTrim: rgba(203, 218, 236, 0.863);
 $mrSuperDarkBlueFeet: rgba(15, 8, 41, 0.884);
+$mybabground: rgba(255, 255, 255, 0.986);
+
+// body {
+//   background-color: $mybabground;
+// }
 
 span {
   vertical-align: bottom;
