initial sort function

--- a/client/src/components/roles/role.scss
+++ b/client/src/components/roles/role.scss
@@ -31,3 +31,11 @@ table tr:nth-child(even) td {
   cursor: pointer;
   color: red;
 }
+
+.table-sort-icon {
+  cursor: pointer;
+  background-color: gray;
+  border: 0.05em solid gray;
+  border-radius: 2em;
+  float: right;
+}
