Sort and Save icon on editing working

--- a/client/src/components/roles/role.scss
+++ b/client/src/components/roles/role.scss
@@ -39,3 +39,8 @@ table tr:nth-child(even) td {
   border-radius: 2em;
   float: right;
 }
+
+.role-table-editing svg {
+  cursor: pointer;
+  color: blue;
+}
