--- a/client/src/components/roles/role.scss
+++ b/client/src/components/roles/role.scss
@@ -1,3 +1,51 @@
+$myBlue: rgb(88, 127, 185);
+
+// .search-bar {
+//   line-height: 2em;
+//   height: 5em;
+// }
+
+.search-bar {
+  width: 100%;
+}
+
+.search-bar em {
+  padding-left: 1em;
+}
+
+.searchInput {
+  width: 25%;
+  border: 1px solid lightgray;
+  border-radius: 5px;
+  padding-left: 1em;
+  padding-right: 1em;
+  height: 2em;
+}
+
+.search-table {
+  width: 100%;
+}
+
+.search-table a {
+  padding-left: 1em;
+  color: blue;
+  text-decoration: underline;
+}
+
+.search-form {
+  padding: 1em;
+  display: flex;
+}
+
+.search-bar input {
+  border: none;
+}
+
+.search-bar svg {
+  cursor: pointer;
+  color: $myBlue;
+}
+
 .table {
   width: 100%;
   border: 1px solid lightslategray;
