--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -26,7 +26,7 @@ body,
   display: flex;
   position: fixed;
   width: 100%;
-  top: 0;
+  top: 2em;
 }
 
 .alert-success {
@@ -41,7 +41,7 @@ body,
 
 .content {
   margin: 0 auto;
-  padding-top: 2em;
+  padding-top: 5em;
   padding-bottom: 5em;
   width: 60%;
 }
