--- a/client/src/components/roles/role.scss
+++ b/client/src/components/roles/role.scss
@@ -5,26 +5,46 @@ $myBlue: rgb(88, 127, 185);
 //   height: 5em;
 // }
 
-.search-bar {
-  width: 100%;
+.roleInput {
+  padding: 0.2em;
+  margin-top: 0.1em;
+  margin-bottom: 0.1em;
+  border: none;
+  -webkit-border-radius: 1px;
+  border-radius: 1em;
+  width: 80%;
+  font-size: 1em;
 }
 
-.search-bar em {
+.search-bar {
+  padding-right: 1em;
   padding-left: 1em;
+
+  width: 35%;
+  border: 2px solid gray;
+  border-radius: 1em;
 }
 
 .searchInput {
-  width: 25%;
-  border: 1px solid lightgray;
+  width: 70%;
+  border: none;
   border-radius: 5px;
-  padding-left: 1em;
+  padding-left: 2em;
   padding-right: 1em;
   height: 2em;
 }
 
-.search-table {
-  width: 100%;
+tr:nth-child(odd) .roleInput {
+  background-color: snow;
 }
+
+tr:nth-child(even) .roleInput {
+  background-color: rgba(233, 231, 231, 0.911);
+}
+
+// .search-table {
+//   width: 100%;
+// }
 
 .search-table a {
   padding-left: 1em;
@@ -47,7 +67,7 @@ $myBlue: rgb(88, 127, 185);
 }
 
 .table {
-  width: 100%;
+  width: 80%;
   border: 1px solid lightslategray;
   border-radius: 0.1px;
   font-size: large;
@@ -56,11 +76,13 @@ $myBlue: rgb(88, 127, 185);
 }
 
 .table td {
+  padding: 0;
   border: 1px solid lightgray;
   border-radius: 0.1px;
 }
 
 table tr:nth-child(odd) td {
+  color: rgb(46, 46, 46);
   background-color: snow;
 }
 table tr:nth-child(even) td {
