--- a/client/src/components/layout/Nav.scss
+++ b/client/src/components/layout/Nav.scss
@@ -6,6 +6,13 @@ $mybabground: rgba(255, 255, 255, 0.986);
 $myColor: rgb(131, 12, 12);
 $myColorLight: rgb(131, 62, 62);
 
+.loader {
+  color: royalblue;
+  margin-left: 50%;
+  margin-right: 50%;
+  margin-top: 5em;
+}
+
 span {
   vertical-align: bottom;
 }
