--- a/client/src/components/layout/Nav.scss
+++ b/client/src/components/layout/Nav.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Saira+Semi+Condensed|Sanchez|Satisfy|Scada|Scheherazade|Seaweed+Script|Zilla+Slab&display=swap");
-$myBlue: rgba(65, 115, 189, 0.89);
+$myBlue: royalBlue;
 $myBlueTrim: rgba(203, 218, 236, 0.863);
 $mrSuperDarkBlueFeet: rgba(15, 8, 41, 0.884);
 $mybabground: rgba(255, 255, 255, 0.986);
