--- a/client/src/components/users/users.scss
+++ b/client/src/components/users/users.scss
@@ -71,30 +71,6 @@ tr:nth-child(even) .userInput {
   background-color: rgba(233, 231, 231, 0.911);
 }
 
-// .search-table {
-//   width: 100%;
-// }
-
-.search-table a {
-  padding-left: 1em;
-  color: blue;
-  text-decoration: underline;
-}
-
-.search-form {
-  padding: 1em;
-  display: flex;
-}
-
-.search-bar input {
-  border: none;
-}
-
-.search-bar svg {
-  cursor: pointer;
-  color: $myBlue;
-}
-
 .table {
   width: 80%;
   border: 1px solid lightslategray;
@@ -142,4 +118,17 @@ table tr:nth-child(even) td {
 .user-table-editing svg {
   cursor: pointer;
   color: blue;
+}
+
+table tr:nth-child(odd) td select {
+  color: rgb(46, 46, 46);
+  background-color: snow;
+}
+table tr:nth-child(even) td select {
+  background-color: rgba(233, 231, 231, 0.911);
+}
+
+table select {
+  font-size: large;
+  border: none;
 }
