oassword reset actually works

--- a/client/src/components/users/users.scss
+++ b/client/src/components/users/users.scss
@@ -107,6 +107,11 @@ table tr:nth-child(even) td {
   color: red;
 }
 
+.user-table-reset-pass {
+  cursor: pointer;
+  color: royalblue;
+}
+
 .table-sort-icon {
   cursor: pointer;
   background-color: gray;
