user can update details and password

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -94,6 +94,10 @@ h2 {
   background-color: $myBlueTrim;
 }
 
+.btn-success {
+  background-color: seagreen;
+}
+
 .form {
   border: 0.05em solid $myBlueTrim;
   padding: 1em;
